[project]
name = "bio-mcp-amber"
version = "0.1.0"
description = "MCP server for AMBER molecular dynamics suite for PDB relaxation"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name = "Bio-MCP Team", email = "bio-mcp@example.com"}]
license = {text = "MIT"}

dependencies = [
    "mcp>=1.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]